Some refactoring and made front-end hierarchy data update on notify

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@ table {
     box-shadow: 0 1px 2px #d1d1d1;
 }
 table th {
-    padding:21px 25px 22px 25px;
+    padding:11px 15px 12px 15px;
     border-top:1px solid #fafafa;
     border-bottom:1px solid #e0e0e0;
 
@@ -58,15 +58,15 @@ table tr:first-child th:last-child {
 }
 table tr {
     text-align: center;
-    padding-left:20px;
+    padding-left:10px;
 }
 table td:first-child {
     text-align: left;
-    padding-left:20px;
+    padding-left:10px;
     border-left: 0;
 }
 table td {
-    padding:18px;
+    padding:9px;
     border-top: 1px solid #ffffff;
     border-bottom:1px solid #e0e0e0;
     border-left: 1px solid #e0e0e0;
@@ -74,6 +74,9 @@ table td {
     background: #fafafa;
     background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
     background: -moz-linear-gradient(top,  #fbfbfb,  #fafafa);
+
+    vertical-align: top;
+    text-align: left;
 }
 table tr.even td {
     background: #f6f6f6;
@@ -101,7 +104,6 @@ table tr:hover td {
 </style>
 </head>
 <body>
-<h1>RundownD</h1>
 
 <div id="rundown-container"></div>
 
