--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@ body {
 table {
     color:#ccc;
     font-size:12px;
-    background:#333;
+    background:#000;
     margin:0px;
     border:#333 1px solid;
+    border-collapse: collapse;
 }
 table th {
     padding:11px 15px 12px 15px;
@@ -29,13 +30,18 @@ table td:first-child {
     text-align: left;
     padding-left:10px;
     border-left: 0;
+    border-bottom: 0;
 }
 table td {
     padding:9px;
     background: #111;
-
+    border:#333 1px solid;
     vertical-align: top;
     text-align: left;
+}
+table td.collapsed {
+    border-top: #000 1px solid !important;
+    text-indent: -300%;
 }
 table tr:last-child td {
     border-bottom:0;
