WIP Adding filter to React rendering

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@ table tr {
     text-align: center;
     padding-left:10px;
 }
+table tr.hidden {
+    display: none;
+}
 table td:first-child {
     text-align: left;
     padding-left:10px;
