--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@ table th {
     padding:11px 15px 12px 15px;
     background: #222;
 }
-table th:first-child {
+table th {
     text-align: left;
     padding-left:20px;
 }
@@ -26,11 +26,10 @@ table tr {
     text-align: center;
     padding-left:10px;
 }
-table tr.hidden {
+.hidden {
     display: none;
 }
 table td:first-child {
-    text-align: left;
     padding-left:10px;
     border-left: 0;
     border-bottom: 0;
@@ -43,11 +42,24 @@ table td {
     text-align: left;
 }
 table td.collapsed {
-    border-top: #000 1px solid !important;
+    border-top: #111 1px solid !important;
     text-indent: -300%;
 }
 table tr:last-child td {
     border-bottom:0;
+}
+
+table th .filterShowHide {
+    text-decoration: underline;
+    color: #9f9;
+    margin-left: 10px;
+    cursor: pointer;
+}
+.filter {
+    position: absolute;
+    background: #222;
+    border: #333 1px solid;
+    padding: 5px 8px;
 }
 </style>
 </head>
