Major restructure of front-end (File layout, webpack, babel, react via npm, etc.)

--- a/public/index.html
+++ b/public/index.html
@@ -67,11 +67,9 @@ table th .filterShowHide {
 
 <div id="rundown-container"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="assets/jsx/rundown.jsx" type="text/jsx"></script>
+<script src="/bundle.js" type="text/javascript"></script>
 
 </body>
 </html>
